# monsun

./: CMakeLists.txt  Makefile  README.md  monsun.h.in
.github/workflows/: monsun-ci.yml
doc/: docgen
lib/: Agent.cpp  CMakeLists.txt  Customer.cpp  Customer.hpp  LinkedList.cpp  LinkedList.hpp  Person.cpp
src/: CMakeLists.txt  gtk-gui.cpp  main.cpp  tui.cpp
src/gtk-gui/: addcustomerw.cpp  editcustomerw.cpp  mainw.cpp
test/: CMakeLists.txt  testCustomer.cpp  testLinkedList.cpp  testPerson.cpp
