option(ENABLE_TUI "Compile Monsun into Terminal User Interface" ON)
option(ENABLE_GUI "compiler Monsun into Graphical User Interface" OFF)

if(ENABLE_TUI)
  message("Compile Monsun with TUI")
elseif(ENABLE_GUI)
  message("Compile Monsun with GUI")
else()
  message("Compile Monsun wiht no interface")
endif()
